--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"exports": {
 		".": "./index.js"
 	},
-	"private": true,
+	"license": "MIT",
 	"scripts": {
 		"lint": "eslint ",
 		"eslint": "eslint --fix ./"
