--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "@tokenring-ai/agent": "0.2.0",
     "@tokenring-ai/app": "0.2.0",
     "@tokenring-ai/chat": "0.2.0",
-    "@aws-sdk/client-s3": "^3.948.0",
-    "@aws-sdk/client-sts": "^3.948.0",
+    "@aws-sdk/client-s3": "^3.952.0",
+    "@aws-sdk/client-sts": "^3.952.0",
     "@tokenring-ai/filesystem": "0.2.0",
     "node-fetch": "^3.3.2",
-    "zod": "^4.1.13"
+    "zod": "catalog:"
   },
   "exports": {
     ".": "./index.ts",
