--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@aws-sdk/client-s3": "^3.978.0",
     "@aws-sdk/client-sts": "^3.978.0",
     "@tokenring-ai/filesystem": "0.2.0",
+    "@tokenring-ai/utility": "0.2.0",
     "node-fetch": "^3.3.2",
     "zod": "^4.3.6"
   },
